[package]
name = "twmaster-collect"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
csv = "1.1.6"
memchr = "2.4.0"
notify = "4.0.17"
serde = { version = "1.0.126", features = ["derive"] }
zstd = "0.8.1"

[patch.crates-io]
zstd = { path = "zstd" }
