[package]
name = "twmaster-collect"
version = "0.0.1"
authors = ["heinrich5991 <heinrich5991@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.33.3"
ctrlc = { version = "3.2.3", features = ["termination"] }
env_logger = "0.9.0"
log = "0.4.17"
memchr = "2.4.0"
notify = "4.0.17"
zstd = { version = "0.9.1", default-features = false }
